syntax = "proto3";

package iam.user.v1;

option go_package = "github.com/cuba-erp/api/iam/user/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// ============ 用户管理服务 ============

service UserService {
  // ========== 用户 CRUD 操作 ==========

  // 注册新用户
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // 获取当前用户（从 AuthService 迁移）
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse);

  // 更新用户信息
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // 更新个人资料（从 AuthService 迁移）
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);

  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);

  // 用户列表查询
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // ========== 用户状态管理 ==========

  // 激活用户
  rpc ActivateUser(ActivateUserRequest) returns (ActivateUserResponse);

  // 停用用户
  rpc DeactivateUser(DeactivateUserRequest) returns (DeactivateUserResponse);

  // 锁定用户
  rpc LockUser(LockUserRequest) returns (LockUserResponse);

  // 解锁用户
  rpc UnlockUser(UnlockUserRequest) returns (UnlockUserResponse);

  // ========== 用户角色管理 ==========

  // 分配角色
  rpc AssignRoles(AssignRolesRequest) returns (AssignRolesResponse);

  // 移除角色
  rpc RemoveRoles(RemoveRolesRequest) returns (RemoveRolesResponse);

  // 获取用户角色
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse);

  // ========== 验证管理 ==========

  // 发送邮箱验证码
  rpc SendEmailVerification(SendEmailVerificationRequest) returns (SendEmailVerificationResponse);

  // 验证邮箱
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);

  // 发送手机验证码
  rpc SendPhoneVerification(SendPhoneVerificationRequest) returns (SendPhoneVerificationResponse);

  // 验证手机
  rpc VerifyPhone(VerifyPhoneRequest) returns (VerifyPhoneResponse);
}

// ============ 消息定义 ============

// 注册请求
message RegisterRequest {
  string username = 1;          // 用户名
  string email = 2;             // 邮箱
  string password = 3;          // 密码
  string display_name = 4;      // 显示名称
  string phone = 5;             // 电话
  string tenant_id = 6;         // 租户 ID
  repeated string role_ids = 7; // 角色 ID 列表
}

// 注册响应
message RegisterResponse {
  string user_id = 1;           // 用户 ID
  User user = 2;                // 用户信息
}

// 获取用户请求
message GetUserRequest {
  string user_id = 1;           // 用户 ID
}

// 获取用户响应
message GetUserResponse {
  User user = 1;                // 用户信息
}

// 获取当前用户请求
message GetCurrentUserRequest {
  string access_token = 1;      // 访问令牌
}

// 获取当前用户响应
message GetCurrentUserResponse {
  User user = 1;                // 用户信息
}

// 更新用户请求
message UpdateUserRequest {
  string user_id = 1;           // 用户 ID
  string username = 2;          // 用户名
  string email = 3;             // 邮箱
  string display_name = 4;      // 显示名称
  string phone = 5;             // 电话
  string avatar_url = 6;        // 头像 URL
  string language = 7;          // 语言
  string timezone = 8;          // 时区
  string status = 9;            // 状态
}

// 更新用户响应
message UpdateUserResponse {
  User user = 1;                // 更新后的用户信息
}

// 更新个人资料请求
message UpdateProfileRequest {
  string user_id = 1;           // 用户 ID
  string display_name = 2;      // 显示名称
  string email = 3;             // 邮箱
  string phone = 4;             // 电话
  string avatar_url = 5;        // 头像 URL
  string language = 6;          // 语言
  string timezone = 7;          // 时区
}

// 更新个人资料响应
message UpdateProfileResponse {
  User user = 1;                // 更新后的用户信息
}

// 删除用户请求
message DeleteUserRequest {
  string user_id = 1;           // 用户 ID
}

// 用户列表请求
message ListUsersRequest {
  string tenant_id = 1;         // 租户 ID 过滤
  string status = 2;            // 状态过滤
  string search = 3;            // 搜索关键词（用户名、邮箱、显示名称）
  repeated string role_ids = 4; // 角色 ID 过滤
  int32 page = 100;             // 页码
  int32 page_size = 101;        // 每页大小
}

// 用户列表响应
message ListUsersResponse {
  repeated User users = 1;      // 用户列表
  int32 page = 2;               // 当前页码
  int32 page_size = 3;          // 每页大小
  int64 total = 4;              // 总记录数
  int32 total_pages = 5;        // 总页数
}

// 激活用户请求
message ActivateUserRequest {
  string user_id = 1;           // 用户 ID
}

// 激活用户响应
message ActivateUserResponse {
  User user = 1;                // 用户信息
}

// 停用用户请求
message DeactivateUserRequest {
  string user_id = 1;           // 用户 ID
  string reason = 2;            // 停用原因
}

// 停用用户响应
message DeactivateUserResponse {
  User user = 1;                // 用户信息
}

// 锁定用户请求
message LockUserRequest {
  string user_id = 1;           // 用户 ID
  string reason = 2;            // 锁定原因
}

// 锁定用户响应
message LockUserResponse {
  User user = 1;                // 用户信息
}

// 解锁用户请求
message UnlockUserRequest {
  string user_id = 1;           // 用户 ID
}

// 解锁用户响应
message UnlockUserResponse {
  User user = 1;                // 用户信息
}

// 分配角色请求
message AssignRolesRequest {
  string user_id = 1;           // 用户 ID
  repeated string role_ids = 2; // 角色 ID 列表
}

// 分配角色响应
message AssignRolesResponse {
  User user = 1;                // 用户信息
}

// 移除角色请求
message RemoveRolesRequest {
  string user_id = 1;           // 用户 ID
  repeated string role_ids = 2; // 角色 ID 列表
}

// 移除角色响应
message RemoveRolesResponse {
  User user = 1;                // 用户信息
}

// 获取用户角色请求
message GetUserRolesRequest {
  string user_id = 1;           // 用户 ID
}

// 获取用户角色响应
message GetUserRolesResponse {
  repeated Role roles = 1;      // 角色列表
}

// ========== 验证相关消息 ==========

// 发送邮箱验证码请求
message SendEmailVerificationRequest {
  string user_id = 1;           // 用户 ID
}

// 发送邮箱验证码响应
message SendEmailVerificationResponse {
  bool success = 1;             // 是否成功
  string message = 2;           // 消息
  int32 expires_in_seconds = 3; // 验证码有效期（秒）
}

// 验证邮箱请求
message VerifyEmailRequest {
  string user_id = 1;           // 用户 ID
  string code = 2;              // 验证码
}

// 验证邮箱响应
message VerifyEmailResponse {
  bool success = 1;             // 是否成功
  string message = 2;           // 消息
}

// 发送手机验证码请求
message SendPhoneVerificationRequest {
  string user_id = 1;           // 用户 ID
}

// 发送手机验证码响应
message SendPhoneVerificationResponse {
  bool success = 1;             // 是否成功
  string message = 2;           // 消息
  int32 expires_in_seconds = 3; // 验证码有效期（秒）
}

// 验证手机请求
message VerifyPhoneRequest {
  string user_id = 1;           // 用户 ID
  string code = 2;              // 验证码
}

// 验证手机响应
message VerifyPhoneResponse {
  bool success = 1;             // 是否成功
  string message = 2;           // 消息
}

// ============ 实体定义 ============

// 用户
message User {
  string id = 1;                // 用户 ID
  string username = 2;          // 用户名
  string email = 3;             // 邮箱
  string display_name = 4;      // 显示名称
  string phone = 5;             // 电话
  string avatar_url = 6;        // 头像 URL
  string tenant_id = 7;         // 租户 ID
  repeated string role_ids = 8; // 角色 ID 列表
  string status = 9;            // 状态 (ACTIVE, INACTIVE, LOCKED)
  string language = 10;         // 语言
  string timezone = 11;         // 时区
  bool two_factor_enabled = 12; // 是否启用双因子认证
  google.protobuf.Timestamp last_login_at = 13; // 最后登录时间
  AuditInfo audit_info = 90;    // 审计信息
}

// 审计信息
message AuditInfo {
  google.protobuf.Timestamp created_at = 1;  // 创建时间
  string created_by = 2;                      // 创建人
  google.protobuf.Timestamp updated_at = 3;  // 更新时间
  string updated_by = 4;                      // 更新人
}

// 角色（简化版，完整定义在 rbac.proto）
message Role {
  string id = 1;                // 角色 ID
  string code = 2;              // 角色代码
  string name = 3;              // 角色名称
  string description = 4;       // 角色描述
}
